syntax = "proto3";
import "google/protobuf/empty.proto";
import "google/api/annotations.proto";
option go_package = "./;v1";

service User {
  // 用户列表
  rpc GetUserList(PageInfo) returns (UserListResponse) {
    option (google.api.http) = {
      get: "/v1/users"
      body: "*"
    };
  }; 

  // 通过 mobile 查询用户
  rpc GetUserByMobile(MobileRequest) returns (UserInfoResponse) {
    option (google.api.http) = {
      get: "/v1/user/mobile"
      body: "*"
    };
  };

  // 通过 id 查询用户
  rpc GetUserById(IdRequest) returns (UserInfoResponse) {
    option (google.api.http) = {
      get: "/v1/user/id"
      body: "*"
    };
  }; 

  // 添加用户
  rpc CreateUser(CreateUserInfo) returns (UserInfoResponse) {
    option (google.api.http) = {
      post: "/v1/user/create"
      body: "*"
    };
  }; 

  // 更新用户
  rpc UpdateUser(UpdateUserInfo) returns (google.protobuf.Empty) {
    option (google.api.http) = {
      put: "/v1/user/update"
      body: "*"
    };
  }; 

  // 检查密码
  rpc CheckPassword(PasswordCheckInfo) returns (CheckResponse) {
    option (google.api.http) = {
      get: "/v1/user/password"
      body: "*"
    };
  }; 
}

message CheckResponse {
  bool success = 1;
}

message PasswordCheckInfo {
  string password = 1;
  string encryptedPassword = 2;
}

message UpdateUserInfo {
  int32 id = 1;
  string nickName = 2;
  string gender = 3;
  uint64 birthday = 4;
}

message CreateUserInfo {
  string nickName = 1;
  string password = 2;
  string mobile = 3;
}

message IdRequest {
  int32 id = 1;
}

message MobileRequest {
  string mobile = 1;
}

message PageInfo {
  uint32 pn = 1;
  uint32 pSize = 2;
}

message UserInfoResponse {
  int32 id = 1;
  string password = 2;
  string mobile = 3;
  string nickName = 4;
  uint64 birthday = 5;
  string gender = 6;
  int32 role = 7;
}

message UserListResponse {
  int32 total = 1;
  repeated UserInfoResponse data = 2;
}